--- a/web/main/static/main/css/base.css
+++ b/web/main/static/main/css/base.css
@@ -1,7 +1,8 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
   background: #000;
+  height: 100%;
 }
 
 #header {
@@ -40,12 +41,17 @@ body {
   background: #fff;
   margin: 0;
   padding: 20px;
+  min-height: 100%;
+  height: auto !important; /*min-height hack*/
+  height: 100%;            /*min-height hack*/
+  margin-bottom: -3em;
 }
 
 #footer {
   margin: 0;
   background: #222;
   color: #999;
+  height: 3em;
 }
 
 #footer p {
