cambios al edit profile, falta aún

--- a/web/user/templates/user/profile.html
+++ b/web/user/templates/user/profile.html
@@ -17,5 +17,5 @@
     <p>Comuna: {{ userprofile.addressCommune }}</p>
 
 </div>
-
+<p><a href="{% url 'user:profile_edit' %}">Editar perfil</a></p>
 {% endblock %}
