--- a/web/user/templates/user/login.html
+++ b/web/user/templates/user/login.html
@@ -26,7 +26,7 @@
     </form>
   </div>
 </div>
-<p><a href="{% url 'user:password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'user:password_reset' %}">Olvidó la contraseña</a></p>
 {% endif %}
 {% endblock %}
 
