--- a/web/user/templates/user/profile_edit.html
+++ b/web/user/templates/user/profile_edit.html
@@ -15,5 +15,30 @@
     </form>
     <br>
 </div>
+<script>
+  $("#id_addressRegion").change(function () {
+    // get the url of the `load_cities` view
+    var url = $("#profile_form").attr("data-commune-url");
+    // get the selected country ID from the HTML input
+    var regionId = $(this).val();
+    console.log(regionId);
 
+    // initialize an AJAX request
+    $.ajax({
+      // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+      url: url,
+      // add the country id to the GET parameters
+      data: {
+        'region': regionId
+      },
+      success: function (data) {
+        // `data` is the return of the `load_cities` view function
+        // replace the contents of the city input with the data that came from the server
+        console.log(data)
+        $("#id_addressCommune").html($.trim(data));
+      }
+    });
+  });
+</script>
 {% endblock %}
+
