--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -80,7 +80,7 @@
       <script type="text/javascript">
         $(function () {
           $('#datetimepicker1').datetimepicker({
-                locale: 'ru',
+                locale: 'es',
                 icons: {
                     time: "far fa-clock",
                     date: "far fa-calendar-alt",
