pulling is my name

--- a/web/user/templates/user/profile.html
+++ b/web/user/templates/user/profile.html
@@ -8,10 +8,10 @@
 
 <div class="container">
 
-    <p>Usuario:   {{ user }}</p>
-    <p>Nombre: {{ user.first_name }}</p>
-    <p>Apellido:  {{ user.last_name }}</p>
-    <p>Email:  {{ user.email }}</p>
+    <p>Usuario:   {{ userprofile.user }}</p>
+    <p>Nombre: {{ userprofile.first_name }}</p>
+    <p>Apellido:  {{ userprofile.last_name }}</p>
+    <p>Email:  {{ userpeofile.email }}</p>
     <p>Calle: {{ userprofile.addressStreet }}</p>
     <p>Región: {{ userprofile.addressRegion }}</p>
     <p>Comuna: {{ userprofile.addressCommune }}</p>
