--- a/web/user/templates/user/profile.html
+++ b/web/user/templates/user/profile.html
@@ -11,7 +11,7 @@
     <p>Usuario:   {{ userprofile.user }}</p>
     <p>Nombre: {{ userprofile.first_name }}</p>
     <p>Apellido:  {{ userprofile.last_name }}</p>
-    <p>Email:  {{ userpeofile.email }}</p>
+    <p>Email:  {{ userprofile.email }}</p>
     <p>Calle: {{ userprofile.addressStreet }}</p>
     <p>Región: {{ userprofile.addressRegion }}</p>
     <p>Comuna: {{ userprofile.addressCommune }}</p>
