--- a/web/appraisal/templates/appraisal/modals.html
+++ b/web/appraisal/templates/appraisal/modals.html
@@ -36,6 +36,8 @@
   </div>
 </div>
 
+
+
 <div class="modal fade" id="modalFinish" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -57,6 +59,27 @@
 </div>
 
 
+
+<div class="modal fade" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Eliminar tasación</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <p>¿Esta seguro que desea eliminar la tasación?</p>
+          <p>¡Se perderán todos los datos!</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        <button class="btn btn-primary" name="delete">Eliminar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
