--- a/web/appraisal/templates/appraisal/realestate_appraisal.html
+++ b/web/appraisal/templates/appraisal/realestate_appraisal.html
@@ -10,11 +10,11 @@
 
 {% block content %}
 
-<form action="" method="post" id="form" ajax_computeValuationsUrl="{% url 'ajax_computeValuations' %}">
-
   {% csrf_token %}
 
   <div class="container-fluid">
+
+    <form action="" method="post" id="navbar" ajax_computeValuationsUrl="{% url 'ajax_computeValuations' %}">
 
     <nav class="navbar justify-content-between">
       <a class="navbar-brand" href="#">Tasación {{realestate.get_propertyType_display}}</a>
@@ -35,6 +35,8 @@
       <button class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalDelete" style="font-family:Material Icons;font-size:1em;">delete</button>
       {% endif %}
     </nav>
+
+    </form>
 
     <div class="row">
 
@@ -92,6 +94,11 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="{{request.GET.tab|tab_nav_class:"annex"}}" id="annex-tab" data-toggle="tab" href="#annex" role="tab" aria-controls="annex" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"annex"}}">
+              Anexos
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="{{request.GET.tab|tab_nav_class:"logbook"}}" id="logbook-tab" data-toggle="tab" href="#logbook" role="tab" aria-controls="logbook" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"logbook"}}">
               Bitácora
             </a>
@@ -102,23 +109,28 @@
 
       <div class="tab-content" id="myTabContent">
 
-      <div class="{{request.GET.tab|tab_pane_class:"general"}}" id="general" role="tabpanel" aria-labelledby="general-tab">
-        {% include "appraisal/realestate_general.html" %}
-      </div>
-      <div class="{{request.GET.tab|tab_pane_class:"property"}}" id="property" role="tabpanel" aria-labelledby="property-tab">
-        {% include "appraisal/realestate_property.html" %}
-      </div>
-      <div class="{{request.GET.tab|tab_pane_class:"surroundings"}}" id="surroundings" role="tabpanel" aria-labelledby="surroundings-tab">
-        {% include "appraisal/realestate_surroundings.html" %}
-      </div>
-      <div class="{{request.GET.tab|tab_pane_class:"value"}}" id="value" role="tabpanel" aria-labelledby="value-tab">
-        {% include "appraisal/realestate_value.html" %}
-      </div>
-      <div class="{{request.GET.tab|tab_pane_class:"logbook"}}" id="logbook" role="tabpanel" aria-labelledby="logbook-tab">
-        {% include "appraisal/realestate_logbook.html" %}
-      </div>
-      <!--
-      -->
+        <!--<form action="" method="post" id="form" ajax_computeValuationsUrl="{% url 'ajax_computeValuations' %}">-->
+          <div class="{{request.GET.tab|tab_pane_class:"general"}}" id="general" role="tabpanel" aria-labelledby="general-tab">
+            {% include "appraisal/realestate_general.html" %}
+          </div>
+          <div class="{{request.GET.tab|tab_pane_class:"property"}}" id="property" role="tabpanel" aria-labelledby="property-tab">
+            {% include "appraisal/realestate_property.html" %}
+          </div>
+          <div class="{{request.GET.tab|tab_pane_class:"surroundings"}}" id="surroundings" role="tabpanel" aria-labelledby="surroundings-tab">
+            {% include "appraisal/realestate_surroundings.html" %}
+          </div>
+          <div class="{{request.GET.tab|tab_pane_class:"value"}}" id="value" role="tabpanel" aria-labelledby="value-tab">
+            {% include "appraisal/realestate_value.html" %}
+          </div>
+        <!--</form>-->
+
+          <div class="{{request.GET.tab|tab_pane_class:"annex"}}" id="annex" role="tabpanel" aria-labelledby="annex-tab">
+            {% include "appraisal/realestate_annex.html" %}
+          </div>
+
+        <div class="{{request.GET.tab|tab_pane_class:"logbook"}}" id="logbook" role="tabpanel" aria-labelledby="logbook-tab">
+          {% include "appraisal/realestate_logbook.html" %}
+        </div>
 
       </div>
 
