--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -16,6 +16,10 @@
         {{form_create.propertyType_create.label_tag}}
         {{form_create.propertyType_create}}
       </div>
+            <div class="col-md-2">
+        {{form_create.tipoTasacion_create.label_tag}}
+        {{form_create.tipoTasacion_create}}
+      </div>
     </div>
     <div class="form-group row">
        <div class="col-md-3">
@@ -29,6 +33,10 @@
       <div class="col-md-2" id="petitioner">
         {{form_create.solicitante_create.label_tag}}
         {{form_create.solicitante_create}}
+      </div>
+        <div class="col-md-2">
+        {{form_create.solicitanteCodigo_create.label_tag}}
+        {{form_create.solicitanteCodigo_create}}
       </div>
             <div class="col-md-2" id="other" hidden>
         {{form_create.solicitanteOther_create.label_tag}}
