--- a/web/appraisal/templates/appraisal/realestate_general.html
+++ b/web/appraisal/templates/appraisal/realestate_general.html
@@ -71,15 +71,23 @@
           Nombre
         </label>
       </div>
-      <div class="col-lg-3">
+        <div class="col-lg-2">
           {{forms.appraisal.solicitante}}
+      </div>
+        <div class="col-auto">
+        <label for="solicitante" class="col-form-label-sm">
+          Código Solicitante
+        </label>
+      </div>
+      <div class="col-lg-2">
+          {{forms.appraisal.solicitanteCodigo}}
       </div>
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
           Sucursal
         </label>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-1">
         {{forms.appraisal.solicitanteSucursal}}
       </div>
       <div class="col-auto">
@@ -87,7 +95,7 @@
           Ejecutivo
         </label>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-2">
         {{forms.appraisal.solicitanteEjecutivo}}
       </div>
     </span>
