--- a/web/appraisal/templates/appraisal/realestate_appraisal.html
+++ b/web/appraisal/templates/appraisal/realestate_appraisal.html
@@ -10,11 +10,10 @@
 
 {% block content %}
 
+  <form class="needs-validation" action="" method="post" id="form" enctype="multipart/form-data" novalidate>
   {% csrf_token %}
 
   <div class="container-fluid">
-
-    <form action="" method="post" id="navbar" ajax_computeValuationsUrl="{% url 'ajax_computeValuations' %}">
 
     <nav class="navbar justify-content-between">
       <a class="navbar-brand" href="#">Tasación {{realestate.get_propertyType_display}}</a>
@@ -27,16 +26,14 @@
       <button class="btn btn-outline-primary mr-2" type="button" data-toggle="modal" data-target="#modalExport">Resumir</button>
       {% endif %}
       {% if appraisal.finished %}
-      <button class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
+      <button name="btn_export" class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
       {% else %}
-      <button class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
-      <button class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalFinish">Finalizar</button>
-      <button class="btn btn-outline-dark mr-2" name="save" style="font-family:Material Icons;font-size:1em;">save_alt</button>
-      <button class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalDelete" style="font-family:Material Icons;font-size:1em;">delete</button>
+      <button name="btn_export" class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
+      <button name="btn_finish" class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalFinish">Finalizar</button>
+      <button name="btn_save" class="btn btn-outline-dark mr-2" name="save" style="font-family:Material Icons;font-size:1em;">save_alt</button>
+      <button name="btn_delete" class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalDelete" style="font-family:Material Icons;font-size:1em;">delete</button>
       {% endif %}
     </nav>
-
-    </form>
 
     <div class="row">
 
@@ -109,25 +106,21 @@
 
       <div class="tab-content" id="myTabContent">
 
-        <!--<form action="" method="post" id="form" ajax_computeValuationsUrl="{% url 'ajax_computeValuations' %}">-->
-          <div class="{{request.GET.tab|tab_pane_class:"general"}}" id="general" role="tabpanel" aria-labelledby="general-tab">
-            {% include "appraisal/realestate_general.html" %}
-          </div>
-          <div class="{{request.GET.tab|tab_pane_class:"property"}}" id="property" role="tabpanel" aria-labelledby="property-tab">
-            {% include "appraisal/realestate_property.html" %}
-          </div>
-          <div class="{{request.GET.tab|tab_pane_class:"surroundings"}}" id="surroundings" role="tabpanel" aria-labelledby="surroundings-tab">
-            {% include "appraisal/realestate_surroundings.html" %}
-          </div>
-          <div class="{{request.GET.tab|tab_pane_class:"value"}}" id="value" role="tabpanel" aria-labelledby="value-tab">
-            {% include "appraisal/realestate_value.html" %}
-          </div>
-        <!--</form>-->
-
-          <div class="{{request.GET.tab|tab_pane_class:"annex"}}" id="annex" role="tabpanel" aria-labelledby="annex-tab">
-            {% include "appraisal/realestate_annex.html" %}
-          </div>
-
+        <div class="{{request.GET.tab|tab_pane_class:"general"}}" id="general" role="tabpanel" aria-labelledby="general-tab">
+          {% include "appraisal/realestate_general.html" %}
+        </div>
+        <div class="{{request.GET.tab|tab_pane_class:"property"}}" id="property" role="tabpanel" aria-labelledby="property-tab">
+          {% include "appraisal/realestate_property.html" %}
+        </div>
+        <div class="{{request.GET.tab|tab_pane_class:"surroundings"}}" id="surroundings" role="tabpanel" aria-labelledby="surroundings-tab">
+          {% include "appraisal/realestate_surroundings.html" %}
+        </div>
+        <div class="{{request.GET.tab|tab_pane_class:"value"}}" id="value" role="tabpanel" aria-labelledby="value-tab">
+          {% include "appraisal/realestate_value.html" %}
+        </div>
+        <div class="{{request.GET.tab|tab_pane_class:"annex"}}" id="annex" role="tabpanel" aria-labelledby="annex-tab">
+          {% include "appraisal/realestate_annex.html" %}
+        </div>
         <div class="{{request.GET.tab|tab_pane_class:"logbook"}}" id="logbook" role="tabpanel" aria-labelledby="logbook-tab">
           {% include "appraisal/realestate_logbook.html" %}
         </div>
@@ -148,9 +141,6 @@
       var due = moment("{{appraisal.timeDueReal.isoformat}}");
       var diff_cal = moment("{{appraisal.timeDueReal.isoformat}}").calendar();
       var diff_from = moment("{{appraisal.timeDueReal.isoformat}}").fromNow();
-      console.log(due)
-      console.log(diff_cal)
-      console.log(diff_from)
       /*
       var now = new Date(), // current date
           months = ['January', 'February', '...']; // you get the idea
@@ -165,7 +155,7 @@
       document.getElementById('timeLeft').innerHTML = 'Entrega: '+diff_cal+' ('+diff_from+')';
 
       // call this function again in 1000ms
-      setTimeout(updateClock, 1000);
+      setTimeout(updateClock, 60*1000);
   }
   updateClock(); // initial call
 </script>
